[project]
name = "comfyui-rvtools"
description = this nodes set contains a lot of small little helpers that i use a lot in my workflows."
version = "2.0.2"
license = { file = "LICENSE" }
dependencies = ["torch", "numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/Rvage0815/ComfyUI-RvTools"

[tool.comfy]
PublisherId = "Rvage0815"
DisplayName = "ComfyUI-RvTools"
Icon = ""
