[project]
name = "comfyui-rvtools"
description = "this node contains a lot of small little helpers like switches, passers and selectors that i use a lot to build my workflows."
version = "2.0.7"
license = { file = "LICENSE" }
dependencies = ["torch", "numpy", "Pillow"]

[project.urls]
Repository = "https://github.com/Rvage0815/ComfyUI-RvTools"

[tool.comfy]
PublisherId = "Rvage0815"
DisplayName = "ComfyUI-RvTools"
Icon = ""
